Fix unintentional horizontal scroll of content

--- a/Resources/FoundationTheme/styles.css
+++ b/Resources/FoundationTheme/styles.css
@@ -126,6 +126,7 @@ a {
 
 .content {
     margin-bottom: 40px;
+    overflow-wrap: break-word;
 }
 
 .browse-all {
